--- a/locales/en.yml
+++ b/locales/en.yml
@@ -26,6 +26,7 @@ selectable_language_window:
 
 config_window:
   config_title: Settings
+  compact_mode: Compact Mode
   side_menu_labels:
     appearance: Appearance
     translation: Translation
