--- a/locales/ja.yml
+++ b/locales/ja.yml
@@ -27,6 +27,7 @@ selectable_language_window:
 
 config_window:
   config_title: 設定
+  compact_mode: コンパクトモード
   side_menu_labels:
     appearance: デザイン
     translation: 翻訳
