--- a/locales/en.yml
+++ b/locales/en.yml
@@ -40,7 +40,7 @@ config_window:
     label: Transparency
     desc: Change the main window's transparency.
   appearance_theme:
-    label: Theme
+    label: Theme [Under development]
     desc: Change the color theme. If you selected "System", it will adjust based on your Windows theme.
   ui_size:
     label: UI Size
