[Update] ソフトのバージョン情報を設定画面に移動、UI Size変更、色の変数化、表記を英語と日本語に対応。

--- a/locales/en.yml
+++ b/locales/en.yml
@@ -27,6 +27,7 @@ selectable_language_window:
 config_window:
   config_title: Settings
   compact_mode: Compact Mode
+  version: version %{version}
   side_menu_labels:
     appearance: Appearance
     translation: Translation
