[Update] Config Window: 再起動が必要な変更がある場合に、再起動ボタンを表示。（現状、設定が変わらなくても変更しようとすると表示される状態ではある。例: UI size 100%からもう一度100%を選択した場合など）

--- a/locales/en.yml
+++ b/locales/en.yml
@@ -28,6 +28,7 @@ config_window:
   config_title: Settings
   compact_mode: Compact Mode
   version: version %{version}
+  restart_message: Apply changes with a restart.
   side_menu_labels:
     appearance: Appearance
     translation: Translation
