--- a/locales/ja.yml
+++ b/locales/ja.yml
@@ -1,7 +1,7 @@
 main_window:
   translation: 翻訳
-  transcription_send: マイク->チャットボックス
-  transcription_receive: スピーカー->ログ
+  transcription_send: 音声認識（マイク）
+  transcription_receive: 音声認識（スピーカー）
   foreground: 最前面表示
 
   language_settings: 言語設定
@@ -44,15 +44,14 @@ config_window:
     desc: メイン画面の透明度を変更できます。
   appearance_theme:
     label: 外観テーマ [開発中]
-    desc: カラーテーマを変更できます。「System」を選択した場合、Windowsのテーマに基づいて自動的に「Dark」か「Light」テーマを判断し、適用します。
+    desc: カラーテーマを変更できます。現在はDarkテーマのみ対応。Lightテーマは制作中です。
   ui_size:
-    label: UIのサイズ
+    label: UIサイズ
   font_family:
     label: 使用フォント
   ui_language:
-    label: UIの言語
+    label: UIの言語 / UI Language
 
-  tab_translation: 翻訳
   deepl_auth_key:
     label: DeepL 認証キー
 
@@ -61,31 +60,33 @@ config_window:
   mic_device:
     label: マイク （デバイス）
   mic_dynamic_energy_threshold:
-    label: マイク入力感度の調整（自動）
-    desc: 有効にするとマイクの入力感度が自動的に調節されます。無効の場合は、スライダーを調整して入力感度を手動で決められます。マイクのアイコンを押すと、実際に声を入力し、音量を確認しながら調節できます。
+    label_for_automatic: "マイク入力感度の調整 (現在の設定: 自動)"
+    desc_for_automatic: マイクの入力感度を自動的に調節する。
+    label_for_manual: "マイク入力感度の調整 (現在の設定: 手動)"
+    desc_for_manual: スライダーを調整して入力感度を手動で決められます。マイクのアイコンを押すと、実際に声を入力し、音量を確認しながら調節できます。
   mic_record_timeout:
-    label: マイク音声の区切りの無音時間
+    label: 入力が終了したとみなす無音時間
   mic_phrase_timeout:
-    label: 文字起こしする音声時間の上限
+    label: 一度に文字起こしする時間の長さ
   mic_max_phrase:
-    label: 保留する単語の上限(マイク)
-    desc: It will stop recording and send the recordings when the set count of phrase(s) is reached.
+    label: 送信するまでに保持する単語数
   mic_word_filter:
-    label: ワードフィルタ
+    label: ワードフィルター
     desc: "設定された単語を検出すると、その文章は送信されません。\n設定の例: AAA,BBB,CCC"
 
   speaker_device:
     label: スピーカー(デバイス)
   speaker_dynamic_energy_threshold:
-    label: スピーカー入力感度の調整（自動）
-    desc: 有効にするとスピーカーの入力感度が自動的に調節されます。無効の場合は、スライダーを調整して入力感度を手動で決められます。ヘッドフォンのアイコンを押すと、実際に音声を聞き取り、音量を確認しながら調節できます。
+    label_for_automatic: "スピーカー入力感度の調整 (現在の設定: 自動)"
+    desc_for_automatic: スピーカーの入力感度を自動的に調節する。
+    label_for_manual: "スピーカー入力感度の調整 (現在の設定: 手動)"
+    desc_for_manual: スライダーを調整して入力感度を手動で決められます。ヘッドフォンのアイコンを押すと、実実際に音声を聞き取り、音量を確認しながら調節できます。
   speaker_record_timeout:
-    label: スピーカー音声の区切りの無音時間
+    label: 入力が終了したとみなす無音時間
   speaker_phrase_timeout:
-    label: 文字起こしする音声時間の上限
+    label: 一度に文字起こしする時間の長さ
   speaker_max_phrase:
-    label: 保留する単語の上限
-    desc: It will stop recording and receive the recordings when the set count of phrase(s) is reached.
+    label: ログとして表示するまでに保持する単語数
 
   auto_clear_the_message_box:
     label: 送信後はチャットボックスを空にする
@@ -94,13 +95,13 @@ config_window:
     desc: 文字起こし（受信）されたメッセージをXSOverlayの機能を使って通知として受け取れます。
   auto_export_message_logs:
     label: 会話ログを自動的に保存する
-    desc: テキストファイルとしてログが保存されます。保存先は/logs/...(調整中)
+    desc: テキストファイルとしてログがlogsフォルダ内に保存されます。
   message_format:
     label: 送信するメッセージのフォーマット
-    desc: VRChatで相手に実際に見えるフォーマットを変更できます。
+    desc: "VRChatで相手に実際に見えるフォーマットを変更できます。\n[message]がメッセージに置換され、\n[translation]が翻訳されたメッセージに置換されます。"
   send_message_to_vrc:
     label: VRChatにメッセージを送信する
-    desc: VRChatにメッセージを送信せずに使う方法があります。サポート対象外ですが。
+    desc: "サポート対象外ですが、VRChatにメッセージを送信せずに使う方法があります。送信したい場合、この機能を有効にする事を忘れないでください。"
 
   osc_ip_address:
     label: OSC IP Address
