--- a/locales/en.yml
+++ b/locales/en.yml
@@ -89,10 +89,15 @@ config_window:
     desc_for_manual: "Manually determine the microphone input sensitivity using the slider. Press the microphone icon to input your voice and adjust the sensitivity while monitoring the volume."
   mic_record_timeout:
     label: Mic Record Timeout
+    desc: (Second(s))
+    # desc: Duration in seconds for detecting silence and determining the end of audio input.
   mic_phrase_timeout:
     label: Mic Phrase Timeout
+    desc: (Second(s))
+    # desc: Duration in seconds for determining the end of audio input and transcribing it in one go.
   mic_max_phrase:
     label: Mic Max Phrases
+    # desc: Once the minimum word count for transcription is reached, it will be send.
   mic_word_filter:
     label: Mic Word Filter
     desc: "It will not send the sentence if the word(s) included in the set list of words.\nHow to set: e.g. AAA,BBB,CCC"
@@ -106,8 +111,10 @@ config_window:
     desc_for_manual: "Manually determine the speaker input sensitivity using the slider. Press the headphones icon to listen to the audio and adjust the sensitivity while monitoring the volume."
   speaker_record_timeout:
     label: Speaker Record Timeout
+    desc: (Second(s))
   speaker_phrase_timeout:
     label: Speaker Phrase Timeout
+    desc: (Second(s))
   speaker_max_phrase:
     label: Speaker Max Phrases
 
