--- a/locales/ja.yml
+++ b/locales/ja.yml
@@ -89,10 +89,15 @@ config_window:
     desc_for_manual: スライダーを調整して入力感度を手動で決められます。マイクのアイコンを押すと、実際に声を入力し、音量を確認しながら調節できます。
   mic_record_timeout:
     label: 入力が終了したとみなす無音時間
+    desc: 単位は秒です。
+    # desc: 無音を検出し、音声入力が終了したとみなす時間の長さです。（秒）
   mic_phrase_timeout:
     label: 一度に文字起こしする時間の長さ
+    desc: 単位は秒です。
+    # desc: 一度に文字起こし処理をする音声時間の長さです。（秒）
   mic_max_phrase:
     label: 送信するまでに保持する単語数
+    # desc: 文字起こしされた単語数を保持する最大値で、その数を超えると送信します。
   mic_word_filter:
     label: ワードフィルター
     desc: "設定された単語を検出すると、その文章は送信されません。\n設定の例: AAA,BBB,CCC"
@@ -106,8 +111,10 @@ config_window:
     desc_for_manual: スライダーを調整して入力感度を手動で決められます。ヘッドフォンのアイコンを押すと、実際に音声を聞き取り、音量を確認しながら調節できます。
   speaker_record_timeout:
     label: 入力が終了したとみなす無音時間
+    desc: 単位は秒です。
   speaker_phrase_timeout:
     label: 一度に文字起こしする時間の長さ
+    desc: 単位は秒です。
   speaker_max_phrase:
     label: ログとして表示するまでに保持する単語数
 
