[Remove] DeepL Authキー廃止によりUIから削除。Translationタブ自体はコメントアウトで削除（将来的にまた必要になると予想して）」

--- a/locales/en.yml
+++ b/locales/en.yml
@@ -55,7 +55,7 @@ config_window:
   restart_message: Apply changes with a restart.
   side_menu_labels:
     appearance: Appearance
-    translation: Translation
+    # translation: Translation
     transcription: Transcription
     transcription_mic: Mic
     transcription_speaker: Speaker
@@ -75,8 +75,8 @@ config_window:
   ui_language:
     label: UI Language
 
-  deepl_auth_key:
-    label: DeepL Auth Key
+  # deepl_auth_key:
+  #   label: DeepL Auth Key
 
   mic_host:
     label: Mic Host/Driver
