--- a/locales/ja.yml
+++ b/locales/ja.yml
@@ -92,15 +92,13 @@ config_window:
     desc_for_manual: スライダーを調整して入力感度を手動で決められます。マイクのアイコンを押すと、実際に声を入力し、音量を確認しながら調節できます。
   mic_record_timeout:
     label: 入力が終了したとみなす無音時間
-    desc: 単位は秒です。
-    # desc: 無音を検出し、音声入力が終了したとみなす時間の長さです。（秒）
+    desc: 無音を検出し、設定された秒数経過すると、音声入力が終了したとみなします。
   mic_phrase_timeout:
     label: 一度に文字起こしする時間の長さ
-    desc: 単位は秒です。
-    # desc: 一度に文字起こし処理をする音声時間の長さです。（秒）
+    desc: 設定された秒数ごとに文字起こし処理が行われます。
   mic_max_phrase:
     label: 送信するまでに保持する単語数
-    # desc: 文字起こしされた単語数を保持する最大値で、その数を超えると送信します。
+    desc: 文字起こしされた単語数の下限値で、この数値を超えた場合のみ結果をVRChatへ送信し、ログに表示します。
   mic_word_filter:
     label: ワードフィルター
     desc: "設定された単語を検出すると、その文章は送信されません。\n設定の例: AAA,BBB,CCC"
@@ -113,12 +111,13 @@ config_window:
     desc_for_manual: スライダーを調整して入力感度を手動で決められます。ヘッドフォンのアイコンを押すと、実際に音声を聞き取り、音量を確認しながら調節できます。
   speaker_record_timeout:
     label: 入力が終了したとみなす無音時間
-    desc: 単位は秒です。
+    desc: 無音を検出し、設定された秒数経過すると、音声入力が終了したとみなします。
   speaker_phrase_timeout:
     label: 一度に文字起こしする時間の長さ
-    desc: 単位は秒です。
+    desc: 設定された秒数ごとに文字起こし処理が行われます。
   speaker_max_phrase:
     label: ログとして表示するまでに保持する単語数
+    desc: 文字起こしされた単語数の下限値で、この数値を超えた場合のみ結果をログに表示します。
 
   auto_clear_the_message_box:
     label: 送信後はチャットボックスを空にする
