--- a/locales/ja.yml
+++ b/locales/ja.yml
@@ -44,6 +44,13 @@ main_window:
 
   cover_message: 設定画面が閉じられるまで、一時的に機能を停止しています。
 
+  confirmation_message:
+    update_software: "新しいバージョンをダウンロードして再起動します。\n少し時間がかかるかもしれません。今すぐ行いますか？"
+    deny_update_software: 後でする
+    accept_update_software: アップデートして再起動
+    updating: アップデート中...
+
+
 
 selectable_language_window:
   title_your_language: あなたの言語
