[Update] 使用ディスプレイサイズの大きさ(高さ)より、VRCT起動時のウィンドウの方が大きい場合の対応。UI Scalingを20%下げて再起動するかどうかの確認モーダルを表示。 それにともない確認モーダルの汎用化。 さらにそれに伴い計算の都合上UI Scalingが40%から200%で10%刻みに対応（選択できるように）しました。

--- a/locales/en.yml
+++ b/locales/en.yml
@@ -50,6 +50,9 @@ main_window:
     accept_update_software: Update and Restart
     updating: Now updating...
 
+    detected_over_ui_size: "Current UI Size: %{current_ui_size}\nVRCT's window size may be larger than your display size.\n* Depending on your display size, you may need to adjust it multiple times."
+    deny_adjust_ui_size: "Keep it at this size"
+    accept_adjust_ui_size: "Set it smaller and restart"
 
 
 selectable_language_window:
