--- a/locales/en.yml
+++ b/locales/en.yml
@@ -66,6 +66,9 @@ config_window:
   compact_mode: Compact Mode
   version: version %{version}
   restart_message: Apply changes with a restart.
+  common_error_message:
+    invalid_value: Invalid value.
+
   side_menu_labels:
     appearance: Appearance
     # translation: Translation
@@ -75,16 +78,21 @@ config_window:
     others: Others
     advanced_settings: Advanced Settings
 
+
   transparency:
     label: Transparency
     desc: Change the main window's transparency.
+
   appearance_theme:
     label: Theme [Under development]
     desc: Change the color theme. Currently, only the Dark theme is supported. The Light theme is under development.
+
   ui_size:
     label: UI Size
+
   font_family:
     label: Font Family
+
   ui_language:
     label: UI Language
 
@@ -93,22 +101,32 @@ config_window:
 
   mic_host:
     label: Mic Host/Driver
+
   mic_device:
     label: Mic Device
+
   mic_dynamic_energy_threshold:
     label_for_automatic: "Mic Energy Threshold (Current Setting: Automatic)"
     desc_for_automatic: "Automatically determine microphone input sensitivity."
     label_for_manual: "Mic Energy Threshold (Current Setting: Manual)"
     desc_for_manual: "Manually determine the microphone input sensitivity using the slider. Press the microphone icon to input your voice and adjust the sensitivity while monitoring the volume."
+    error_message: You can set it with a value between 0 to %{max}.
+
   mic_record_timeout:
     label: Mic Record Timeout
     desc: Detects silence and, when the specified number of seconds has passed, considers the mic input to have ended. (Second(s))
+    error_message: It cannot be greater than '%{mic_phrase_timeout_label}' with a value of 0 or more.
+
   mic_phrase_timeout:
     label: Mic Phrase Timeout
     desc: Transcription processing is performed at intervals of the specified number of seconds.
+    error_message: It cannot be set lower than '%{mic_record_timeout_label}' with a value of 0 or more.
+
   mic_max_phrase:
     label: Mic Max Phrases
     desc: It is the lower limit for the number of transcribed words, and only when this number is exceeded will the transcription results be displayed logs and send to VRChat.
+    error_message: You can set a number equal to or greater than 0.
+
   mic_word_filter:
     label: Mic Word Filter
     desc: "It will not send the sentence if the word(s) included in the set list of words.\nHow to set: e.g. AAA,BBB,CCC"
@@ -119,32 +137,46 @@ config_window:
     desc_for_automatic: "Automatically determine speaker input sensitivity."
     label_for_manual: "Speaker Energy Threshold (Current Setting: Manual)"
     desc_for_manual: "Manually determine the speaker input sensitivity using the slider. Press the headphones icon to listen to the audio and adjust the sensitivity while monitoring the volume."
+    error_message: You can set it with a value between 0 to %{max}.
+    no_device_error_message: No speaker device detected.
+
   speaker_record_timeout:
     label: Speaker Record Timeout
     desc: Detects silence and, when the specified number of seconds has passed, considers the speaker input to have ended. (Second(s))
+    error_message: It cannot be greater than '%{speaker_phrase_timeout_label}' with a value of 0 or more.
+
   speaker_phrase_timeout:
     label: Speaker Phrase Timeout
     desc: Transcription processing is performed at intervals of the specified number of seconds.
+    error_message: It cannot be set lower than '%{speaker_record_timeout_label}' with a value of 0 or more.
+
   speaker_max_phrase:
     label: Speaker Max Phrases
     desc: It is the lower limit for the number of transcribed words, and only when this number is exceeded will the transcription results be displayed logs.
+    error_message: You can set a number equal to or greater than 0.
+
 
   auto_clear_the_message_box:
     label: Auto Clear The Message Box
+
   notice_xsoverlay:
     label: Notification XSOverlay (VR Only)
     desc: Notify received messages by using XSOverlay's notification feature.
+
   auto_export_message_logs:
     label: Auto Export Message Logs
     desc: Automatically export the conversation messages as a text file.
+
   message_format:
     label: Message Format
     desc: "You can change the decoration of the message you want to send.\n[message] will be replaced with the message, and [translation] will be replaced with the translated message.\nIt will be used in Notification XSOverlay too."
+
   send_message_to_vrc:
     label: Send Message To VRChat
     desc: There is a way to use it without sending messages to VRChat, but it is not supported. Enable this feature when you intend to send a message to VRChat.
 
   osc_ip_address:
     label: OSC IP Address
+
   osc_port:
     label: OSC Port
