--- a/locales/ja.yml
+++ b/locales/ja.yml
@@ -67,6 +67,9 @@ config_window:
   compact_mode: コンパクトモード
   version: バージョン %{version}
   restart_message: 再起動して変更を適用する。
+  common_error_message:
+    invalid_value: 無効な値です。
+
   side_menu_labels:
     appearance: デザイン
     # translation: 翻訳
@@ -76,16 +79,21 @@ config_window:
     others: その他
     advanced_settings: 高度な設定
 
+
   transparency:
     label: 透明度
     desc: メイン画面の透明度を変更できます。
+
   appearance_theme:
     label: 外観テーマ [開発中]
     desc: カラーテーマを変更できます。現在はDarkテーマのみ対応。Lightテーマは制作中です。
+
   ui_size:
     label: UIサイズ
+
   font_family:
     label: 使用フォント
+
   ui_language:
     label: UIの言語 / UI Language
 
@@ -94,22 +102,32 @@ config_window:
 
   mic_host:
     label: マイク（ホスト/ドライバー）
+
   mic_device:
     label: マイク （デバイス）
+
   mic_dynamic_energy_threshold:
     label_for_automatic: "マイク入力感度の調整 (現在の設定: 自動)"
     desc_for_automatic: マイクの入力感度を自動的に調節する。
     label_for_manual: "マイク入力感度の調整 (現在の設定: 手動)"
     desc_for_manual: スライダーを調整して入力感度を手動で決められます。マイクのアイコンを押すと、実際に声を入力し、音量を確認しながら調節できます。
+    error_message: 0 から %{max} までの数値で設定できます。
+
   mic_record_timeout:
     label: 入力が終了したとみなす無音時間
     desc: 無音を検出し、設定された秒数経過すると、音声入力が終了したとみなします。
+    error_message: 0 以上で 「%{mic_phrase_timeout_label}」より大きくすることはできません。
+
   mic_phrase_timeout:
     label: 一度に文字起こしする時間の長さ
     desc: 設定された秒数ごとに文字起こし処理が行われます。
+    error_message: 0 以上で 「%{mic_record_timeout_label}」より小さくすることはできません。
+
   mic_max_phrase:
     label: 送信するまでに保持する単語数
     desc: 文字起こしされた単語数の下限値で、この数値を超えた場合のみ結果をVRChatへ送信し、ログに表示します。
+    error_message: 0以上の数値を設定できます。
+
   mic_word_filter:
     label: ワードフィルター
     desc: "設定された単語を検出すると、その文章は送信されません。\n設定の例: AAA,BBB,CCC"
@@ -120,32 +138,45 @@ config_window:
     desc_for_automatic: スピーカーの入力感度を自動的に調節する。
     label_for_manual: "スピーカー入力感度の調整 (現在の設定: 手動)"
     desc_for_manual: スライダーを調整して入力感度を手動で決められます。ヘッドフォンのアイコンを押すと、実際に音声を聞き取り、音量を確認しながら調節できます。
+    error_message: 0 から %{max} までの数値で設定できます。
+    no_device_error_message: スピーカーデバイスが検出されませんでした。
+
   speaker_record_timeout:
     label: 入力が終了したとみなす無音時間
     desc: 無音を検出し、設定された秒数経過すると、音声入力が終了したとみなします。
+    error_message: 0 以上で 「%{speaker_phrase_timeout_label}」より大きくすることはできません。
+
   speaker_phrase_timeout:
     label: 一度に文字起こしする時間の長さ
     desc: 設定された秒数ごとに文字起こし処理が行われます。
+    error_message: 0 以上で 「%{speaker_record_timeout_label}」より小さくすることはできません。
+
   speaker_max_phrase:
     label: ログとして表示するまでに保持する単語数
     desc: 文字起こしされた単語数の下限値で、この数値を超えた場合のみ結果をログに表示します。
+    error_message: 0以上の数値を設定できます。
 
   auto_clear_the_message_box:
     label: 送信後はチャットボックスを空にする
+
   notice_xsoverlay:
     label: XSOverlayでの通知受け取り機能を有効 (VR限定)
     desc: 文字起こし（受信）されたメッセージをXSOverlayの機能を使って通知として受け取れます。
+
   auto_export_message_logs:
     label: 会話ログを自動的に保存する
     desc: テキストファイルとしてログがlogsフォルダ内に保存されます。
+
   message_format:
     label: 送信するメッセージのフォーマット
     desc: "VRChatで相手に実際に見えるフォーマットを変更できます。\n[message]がメッセージに置換され、\n[translation]が翻訳されたメッセージに置換されます。\n※XSOverlayでの通知受け取り機能でも使われます。"
+
   send_message_to_vrc:
     label: VRChatにメッセージを送信する
     desc: "サポート対象外ですが、VRChatにメッセージを送信せずに使う方法があります。送信したい場合、この機能を有効にする事を忘れないでください。"
 
   osc_ip_address:
     label: OSC IP Address
+
   osc_port:
     label: OSC Port
