--- a/locales/ja.yml
+++ b/locales/ja.yml
@@ -72,7 +72,7 @@ config_window:
 
   side_menu_labels:
     appearance: デザイン
-    # translation: 翻訳
+    translation: 翻訳
     transcription: 音声認識
     transcription_mic: マイク
     transcription_speaker: スピーカー
@@ -97,8 +97,8 @@ config_window:
   ui_language:
     label: UIの言語 / UI Language
 
-  # deepl_auth_key:
-  #   label: DeepL 認証キー
+  deepl_auth_key:
+    label: DeepL 認証キー
 
   mic_host:
     label: マイク（ホスト/ドライバー）
