--- a/locales/ja.yml
+++ b/locales/ja.yml
@@ -29,6 +29,7 @@ main_window:
 
     no_mic_device_detected_error: マイクデバイスが検出されませんでした。
     no_speaker_device_detected_error: スピーカーデバイスが検出されませんでした。
+    translation_engine_limit_error: 翻訳機能を自動的に停止しました。翻訳エンジンへのリクエストが多すぎるため、一時的にアクセスが制限されています。しばらく待ってから、VRCTの再起動をしてもう一度試してみてください。
 
     detected_by_word_filter: ワードフィルターに登録されている単語 %{detected_message} が検出されたため送信しませんでした。
 
@@ -54,6 +55,9 @@ main_window:
     deny_adjust_ui_size: このサイズのままで良い
     accept_adjust_ui_size: 小さく設定して再起動
 
+
+    translation_engine_limit_error: "翻訳機能を自動的に停止しました。\n翻訳エンジンへのリクエストが多すぎるため\n一時的にアクセスが制限されています。\nしばらく待ってから、VRCTの再起動をしてもう一度試してみてください。"
+    accept_translation_engine_limit_error: 了承して閉じる
 
 
 selectable_language_window:
