[Update] テキストボックスのフォントサイズを、UI全体のサイズとは別でユーザーが変えられるように。 (UI size, scalingを基準とした倍率)

--- a/locales/en.yml
+++ b/locales/en.yml
@@ -95,6 +95,10 @@ config_window:
   ui_size:
     label: UI Size
 
+  textbox_ui_size:
+    label: Text Box Font Size
+    desc: You can adjust the font size used in the logs relative to the UI size.
+
   font_family:
     label: Font Family
 
