[Update] Mic Word Filter: UI改善、リスト表記にし、追加や削除も直感的に行えるように。※_SettingBoxGenerator.py内に追加された関数が、汎用的ではなく、ワードフィルター専用状態です。 config.py: 登録された単語は一意になるように、順序を保持しつつ重複削除処理。 その他ワードフィルターの説明文言調整など。

--- a/locales/en.yml
+++ b/locales/en.yml
@@ -138,7 +138,9 @@ config_window:
 
   mic_word_filter:
     label: Mic Word Filter
-    desc: "It will not send the sentence if the word(s) included in the set list of words.\nHow to set: e.g. AAA,BBB,CCC"
+    desc: "If a registered word is detected, the text will not be sent. To add multiple words at once, separate them with a \",\" (comma). \n*Duplicate words will not be registered."
+    add_button_label: Add
+    count_desc: "Current registered word count: %{count}"
 
 
   speaker_dynamic_energy_threshold:
