--- a/locales/ko.yml
+++ b/locales/ko.yml
@@ -175,6 +175,7 @@ config_window:
   message_format:
     label: 전송 형식
     # desc: "You can change the decoration of the message you want to send.\n[message] will be replaced with the message, and [translation] will be replaced with the translated message.\nIt will be used in Notification XSOverlay too."
+    example_text: 예문입니다. 글꼴, 줄 바꿈 등이 실제 표시와 다를 수 있습니다.
 
   # send_message_to_vrc:
   #   label: Send Message To VRChat
