[Update] Main Window: add feature. Swap Languages. when hover the label 'Translate Each Other', 'Swap Languages Button' appear. and It can swap 'Your language' and 'Target Language'.

--- a/locales/en.yml
+++ b/locales/en.yml
@@ -7,6 +7,7 @@ main_window:
   language_settings: Language Settings
   your_language: Your Language
   both_direction_desc: Translate Each Other
+  swap_button_label: Swap Languages
   target_language: Target Language
 
   textbox_tab_all: All
