[Chore/fix] Config Window: Appearance theme 文言修正(en)

--- a/locales/en.yml
+++ b/locales/en.yml
@@ -91,7 +91,7 @@ config_window:
 
   appearance_theme:
     label: Theme
-    desc: Change the color theme. Currently.
+    desc: Change the color theme.
 
   ui_size:
     label: UI Size
