--- a/locales/en.yml
+++ b/locales/en.yml
@@ -82,6 +82,8 @@ config_window:
     transcription_mic: Mic
     transcription_speaker: Speaker
     others: Others
+    others_send_message_formats: Message Formats(Send)
+    others_received_message_formats: Message Formats(Received)
     others_speaker2chatbox: Speaker2Chatbox
     advanced_settings: Advanced Settings
 
@@ -180,25 +182,40 @@ config_window:
     label: Auto Export Message Logs
     desc: Automatically export the conversation messages as a text file.
 
-  message_format:
-    label: Message Format
-    desc: "You can change the decoration of the message you want to send.\n[message] will be replaced with the message, and [translation] will be replaced with the translated message.\nIt will be used in Notification XSOverlay too."
-    example_text: This is an example sentence. Fonts, line breaks, etc. may differ from the actual display.
-    error_message: "The characters '[message]' and '[translation]' cannot be used."
-
   send_message_to_vrc:
     label: Send Message To VRChat
     desc: There is a way to use it without sending messages to VRChat, but it is not supported. Enable this feature when you intend to send a message to VRChat.
 
-  # Speaker2Chatbox
-  received_message_format:
-    label: Message Format (Speaker2Chatbox)
+
+  send_message_format:
+    label: Message Format
+    desc: "You can change the decoration of the message you want to send.\n[message] will be replaced with the message."
+    example_text: This is an example sentence. Fonts, line breaks, etc. may differ from the actual display.
+    error_message: "The characters '[message]' cannot be used."
+
+  send_message_format_with_t:
+    label: Message Format(With translation)
+    desc: "You can change the decoration of the message you want to send.\n[message] will be replaced with the message, and [translation] will be replaced with the translated message."
     example_text: This is an example sentence. Fonts, line breaks, etc. may differ from the actual display.
     error_message: "The characters '[message]' and '[translation]' cannot be used."
 
+  received_message_format:
+    label: Message Format
+    desc: "You can change the decoration of the received message you want to send.\n[message] will be replaced with the message.\nIt will be used in Notification XSOverlay too."
+    example_text: This is an example sentence. Fonts, line breaks, etc. may differ from the actual display.
+    error_message: "The characters '[message]' cannot be used."
+
+  received_message_format_with_t:
+    label: Message Format(With translation)
+    desc: It will be used in Notification XSOverlay too.
+    example_text: This is an example sentence. Fonts, line breaks, etc. may differ from the actual display.
+    error_message: "The characters '[message]' and '[translation]' cannot be used."
+
+  # Speaker2Chatbox
   send_received_message_to_vrc:
     label: Send Received Message To VRChat
-    # Speaker2Chatbox
+  # Speaker2Chatbox
+
 
   osc_ip_address:
     label: OSC IP Address
