--- a/locales/en.yml
+++ b/locales/en.yml
@@ -174,6 +174,9 @@ config_window:
   auto_clear_the_message_box:
     label: Auto Clear The Message Box
 
+  send_only_translated_messages:
+    label: Send Only Translated Messages
+
   notice_xsoverlay:
     label: Notification XSOverlay (VR Only)
     desc: Notify received messages by using XSOverlay's notification feature.
