[Update] Main Window: Message Box. メッセージ入力欄のサイズを変更できるように。厳密な計算はしてません。 【見た目への影響大】デフォルトのチャット入力欄を少し大きくしました。（もちろん変更できる） テキストボックスとの比率としているので、Windowサイズを変更すると、それに合わせて可変します。 CTkEntryからCTkTextboxに変更しました。プレースホルダーの使用が厳しくなったので廃止しました。最小にしても、入力中の位置が中央にならないなど、デザインが若干崩れましたが許容しました。

--- a/locales/en.yml
+++ b/locales/en.yml
@@ -103,6 +103,10 @@ config_window:
     label: Text Box Font Size
     desc: You can adjust the font size used in the logs relative to the UI size.
 
+  message_box_ratio:
+    label: Message Box Size
+    desc: "You can change the size of the input message box. It is in ratio to the text box.\n*No exact calculations."
+
   font_family:
     label: Font Family
 
