--- a/locales/ja.yml
+++ b/locales/ja.yml
@@ -100,6 +100,10 @@ config_window:
     label: テキストボックス フォントサイズ
     desc: ログに表示されるフォントのサイズを、UIサイズを基準にして倍率を変えられます。
 
+  message_box_ratio:
+    label: メッセージ入力欄のサイズ
+    desc: "メッセージ入力欄のサイズを変更できます。テキストボックスとの比率となっています。\n※厳密な計算はしていません。"
+
   font_family:
     label: 使用フォント
 
